--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
 <table width="455" border="0" align="center" cellpadding="0" cellspacing="0" >
 <tr align="center">
 
-<td> <img src="Images/<%=i%>.jpg" width="118" height="166" border="1"> </td>
+<td> <img src="images/bullet.jpg" width="118" height="166" border="1"> </td>
+<td> <img src="images/bullet.jpg" width="118" height="166" border="1"> </td>
+<td> <img src="images/bullet.jpg" width="118" height="166" border="1"> </td>
+<td> <img src="images/bullet.jpg" width="118" height="166" border="1"> </td>
+<td> <img src="images/bullet.jpg" width="118" height="166" border="1"> </td>
 
 </tr>
 </table>
