--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 <tr>
 <td valign="top" id="marquePic1">
 <!-- 要循环滚动的图片 -->
-<table width="455" border="0" align="center" cellpadding="0" cellspacing="0" >
+<table width="800" border="0" align="center" cellpadding="0" cellspacing="0" >
 <tr align="center">
 
-<td> <img src="images/bullet.jpg" width="118" height="166" border="1"> </td>
+<td> <img src="images/1.jpg" width="118" height="166" border="1"> </td>
 <td> <img src="images/bullet.jpg" width="118" height="166" border="1"> </td>
 <td> <img src="images/bullet.jpg" width="118" height="166" border="1"> </td>
 <td> <img src="images/bullet.jpg" width="118" height="166" border="1"> </td>
