--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <a href="https://github.com/lao-ban/test/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/lao-ban/test/tarball/master" class="btn">Download .tar.gz</a>
     </section>
-<div id="demo" style=" overflow: hidden; width: 455px; height: 166px;">
+<div id="demo" style=" overflow: hidden; width: 800px; height: 166px;">
 <table border="0" cellspacing="0" cellpadding="0">
 <tr>
 <td valign="top" id="marquePic1">
@@ -26,10 +26,9 @@
 <tr align="center">
 
 <td> <img src="images/1.jpg" width="118" height="166" border="1"> </td>
-<td> <img src="images/bullet.jpg" width="118" height="166" border="1"> </td>
-<td> <img src="images/bullet.jpg" width="118" height="166" border="1"> </td>
-<td> <img src="images/bullet.jpg" width="118" height="166" border="1"> </td>
-<td> <img src="images/bullet.jpg" width="118" height="166" border="1"> </td>
+<td> <img src="images/2.jpg" width="118" height="166" border="1"> </td>
+<td> <img src="images/3.jpg" width="118" height="166" border="1"> </td>
+<td> <img src="images/4.jpg" width="118" height="166" border="1"> </td>
 
 </tr>
 </table>
