--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Test by lao-ban</title>
+    <title>1313的逗比生活</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
   </head>
